使用http访问时，跳转到https

--- a/srv/salt/website/files/huangshaoyan.me.conf
+++ b/srv/salt/website/files/huangshaoyan.me.conf
@@ -1,4 +1,14 @@
 server {
+    listen       80;
+    server_name huangshaoyan.me www.huangshaoyan.me;
+
+    # http ==> https
+    location = / {
+        return 302 https://$server_name/;
+    }
+}
+
+server {
     listen      443 ssl;
     server_name huangshaoyan.me www.huangshaoyan.me;
 
